# HuMoCon

./: README.md
Alien_Gesture/: LocoDist.py  Model_Torch.py  SampleParser.py  TiltMan.py  aliengo.py  deprecated_safety.py  graph.py  leaning.py  mapping.py  oneJump.py  pmtg.py  ppo_high.py  push.py  push_exp.py  sitting.py  sitting_manipulate.py
Alien_Gesture/KinectRaisimtest/: CMakeLists.txt  asdf.py  main.cpp
Alien_Gesture/KinectRaisimtest/build_temp/: CMakeCache.txt  Makefile  cmake_install.cmake
Alien_Gesture/KinectRaisimtest/include/: BVH.cpp  BVH.h  BVHparser.cpp  BVHparser.h  raisimBasicImguiPanel.hpp
Alien_Gesture/KinectRaisimtest/rsc/: Wheel.mtl  activation.raisim
Alien_Gesture/KinectRaisimtest/rsc/MotionCapture/: D1_001_KAN01_001.bvh  D1_007_KAN01_002.bvh
Alien_Gesture/env/A1_LocoDist/loco/: Environment.hpp
Alien_Gesture/env/A1_Reaching/env/: Environment.hpp
Alien_Gesture/env/A1_Reaching_Expanded/env/: Environment.hpp  Environment_old_for_ballthrowing.hpp  cfg.yaml
Alien_Gesture/env/A1_TiltMan/env/: Environment.hpp
Alien_Gesture/env/A1_basic_map/env/: Environment.hpp  cfg.yaml
Alien_Gesture/env/AlienGo_InplaceTurn/: Environment.hpp
Alien_Gesture/env/AlienGo_Lean/lean/: Environment.hpp
Alien_Gesture/env/AlienGo_Mapping/mapping/: Environment.hpp  Environment_mp.hpp  cfg.yaml
Alien_Gesture/env/AlienGo_OneJump/env/: Environment.hpp
Alien_Gesture/env/AlienGo_PMTG/pmtg/: Environment.hpp  cfg.yaml
Alien_Gesture/env/AlienGo_Reaching/reaching/: Environment.hpp
Alien_Gesture/env/AlienGo_Sitting/sitting/: Environment.hpp  cfg.yaml
Alien_Gesture/env/include/: AnalyticIK.hpp  BVH.hpp  BVHCallBack.hpp  Controller.hpp  EnvMath.hpp  GaitMapper.hpp  IKIPopt.hpp  IKSolver.hpp  MappingFunctions.hpp  MotionFunction.hpp  MotionPlanner.hpp  RobotInfo.hpp  RootPredictor.hpp  SampleGenerator.hpp  TrajectoryGenerator.hpp  motionParser.hpp  visSetupCallback2.hpp
Alien_Gesture/env/old_envs/: Environment_Exp.hpp  Environment_HT.hpp  Environment_Jump.hpp  Environment_OLDTest.hpp  Environment_doubleAngle.hpp  Environment_ik.hpp  Environment_pace.hpp  Environment_singleA.hpp  Environment_task_failed.hpp  Environment_tq.hpp
Alien_Gesture/env/robots/a1/meshes/: calf.dae
Alien_Gesture/env/robots/a1_ref/a1/: a1.urdf
Alien_Gesture/env/robots/a1_ref/meshes/: calf.dae  hip.dae  thigh.dae  thigh_mirror.dae
Alien_Gesture/env/robots/aliengo/meshes/: calf.dae
Alien_Gesture/env/rsc/: changed_cfg.yaml  default_cfg.yaml  lean_motions.txt  new_motion.txt  old_motion.txt
Alien_Gesture/env/visualizer_alien/: BodyTrakingHelper.hpp  k4apixel.h  raisimKeyboardCallback.hpp  raisimLocomotionImguiPanel.hpp
Alien_Gesture/motion/: motion_trial.txt
Alien_Gesture/new_alg/: new_ppo2.py
Alien_Gesture/rsc/map_lean/: params_lean1.txt  params_lean2.txt  params_lean3.txt  params_lean4.txt  params_lean5.txt  params_lean6.txt  params_lean7.txt  params_lean8.txt  params_lean9.txt  params_leanlong.txt  points_leanlong.txt  tilt1312.pt  tiltCont.pt  tiltcont.pt
Alien_Gesture/rsc/map_loco/: loco.pt  lococont.pt  locotest.pt  locotestcont.pt  params_loco11.txt  params_loco12.txt  params_loco13.txt  points_loco11.txt  points_loco12.txt  points_loco13.txt
Alien_Gesture/rsc/map_loco/old/: locotrot.pt  locotrotcont.pt
Alien_Gesture/rsc/map_reach/: All.pt  man_fin.pt  man_first.pt  params_reach11.txt  params_reach12.txt  params_reacht.txt  params_reacht2.txt  params_reacht_oldest.txt  params_rs03.txt  points_reach11.txt  points_reach12.txt  points_reacht.txt  points_reacht2.txt  points_reacht_oldest.txt
RobotControl/: .gitignore  CMakeLists.txt  SampleParser.py  gesture.py  recorded.py  recordedhuman.py  run.py  setup.py  shorts.py  simulation.py  test.py  utils.py
RobotControl/cb/algo/ppo2/: ppo2.py
RobotControl/cb/env/: Control1.hpp  GymVecEnv.py  OldDepEnv.hpp  PD_Con.hpp  VectorizedEnvironment.hpp  bind_gym.cpp  runner.py
RobotControl/cb/include/: FloorDetector.hpp  MotionFunction.hpp  PointCloudGenerator.hpp  RobotInfo.hpp  SampleMathTypes.h  raisimBasicImguiPanel.hpp  raisimKeyboardCallback.hpp
RobotControl/cb/rsc/a1/a1/: a1.urdf
RobotControl/cb/rsc/a1_ref/meshes/: calf.dae  hip.dae  thigh.dae  thigh_mirror.dae
RobotControl/new_alg/: Model_Torch.py  action_filter.py  new_ppo2.py
RobotControl/rsc/map_gesture/: gesture.pt  gesture_cont.pt
RobotControl/rsc/map_lean/: lean2.pt  params_lean1.txt  tilt.pt  tilt2022.pt  tiltcont.pt
RobotControl/rsc/map_loco/: locosimp.pt  locosimpcont.pt  locotrot.pt  locotrotcont.pt  trotagil.pt  trotagilcont.pt  trotsimp.pt  trotsimpcont.pt
RobotControl/rsc/map_loco_param/: param_loco.pt  param_loco_del.pt
RobotControl/rsc/map_reach/: Allcont.pt  man01.pt  man2022.pt  man2022cont.pt  manTilt.pt  manTiltCon.pt  man_cont.pt
RobotControl/rsc/map_sit/: sit_man1.pt
RobotControl/rsc/map_walk/: walk1.pt  walk1_cont.pt
raisimGymTiltMan/: CMakeLists.txt  setup.py
raisimGymTiltMan/raisim_gym_tiltman/algo/ppo2/: ppo2.py
raisimGymTiltMan/raisim_gym_tiltman/env/: RaisimGymEnv.hpp  RaisimGymVecEnv.py  VectorizedEnvironment.hpp  debug_app.cpp  raisim_gym.cpp
